# ood-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/ood-agent-rag/: SKILL.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation-cli/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
doc/de/: handbuch.md  ood-query-zepas-sync-zuruecksetzen.md  retrieval-technik.md  tutorial.md
doc/en/: manual.md  retrieval-technique.md  tutorial.md
docs/: ood-kb-source-quality.md  ood-learning-loop.md  ood-rag-skill.md  phase-16-umsetzung.md
evaluation/datasets/: mock-v1.json  ood-kb-traceid-smoke.json
src/ood/: __init__.py  cli.py  config.py  eval_baseline.py  eval_cli.py  eval_report.py  eval_runner.py  evaluation.py  evaluation_metrics.py  evaluation_ticket_metrics.py  incident.py  incident_synthesis.py  knowledge_quality.py  learning.py  mock_corpus.py  mock_validation.py  models.py  rag.py  ticket_intelligence.py
tests/: test_cli.py  test_config.py  test_eval_baseline.py  test_eval_cli.py  test_eval_report.py  test_eval_runner.py  test_evaluation.py  test_evaluation_metrics.py  test_evaluation_ticket_metrics.py  test_incident.py  test_incident_synthesis.py  test_knowledge_quality.py  test_learning.py  test_mock_corpus.py  test_mock_indexing.py  test_mock_validation.py  test_models.py  test_project_scaffold.py  test_rag.py  test_ticket_intelligence.py
(+104 files in other folders)
