[project]
name = "ood-agent"
version = "0.1.0"
description = "RAG-based assistant for ServiceNow ticket triage and solution suggestions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "lightrag-hku==1.4.15",
    "sentence-transformers==5.4.1",
    "openai==2.33.0",
    "numpy==2.4.4 ; python_full_version >= '3.11'",
    "numpy<2.4 ; python_full_version < '3.11'",
]

[project.scripts]
ood = "ood.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ood"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
packages = ["ood"]
strict = true
